SE-13: Fix contribution panel spacing on contacts contribution tab

--- a/scss/civicrm/contact/_detail.scss
+++ b/scss/civicrm/contact/_detail.scss
@@ -12,7 +12,7 @@
   }
 
   div.crm-contact-contribute-contributions {
-    padding-top: 20px !important;
+    margin-bottom: 20px;
   }
 
   .crm-summary-block {
@@ -86,6 +86,23 @@
   .CRM_Contribute_Form_Search {
     .action-link {
       line-height: normal;
+    }
+
+    .crm-contact-contribute-softcredit {
+      > p {
+        margin: 0;
+      }
+
+      .form-layout-compressed {
+        tr:first-child {
+          height: 50px;
+          line-height: 50px;
+
+          th {
+            padding-top: 0;
+          }
+        }
+      }
     }
 
     .form-layout-compressed {
